change some info

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+[data-aos="bg-slide-up"] {
+    background: transparent;
+    color:aliceblue;
+    transition-property: background;
+}
+
+[data-aos="bg-slide-up"].aos-animate {
+    background:white;
+    color: darkslategrey;
+}
+
+[data-aos="bg-slide-up"].aos-animate nav{
+    color: darkslategrey;
+}
