--- a/public/css/app.css
+++ b/public/css/app.css
@@ -763,10 +763,6 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
-.bg-blue-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
-}
 .bg-violet-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(91 33 182 / var(--tw-bg-opacity));
@@ -956,6 +952,10 @@ video {
   --tw-blur: blur(8px);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
+.drop-shadow-lg {
+  --tw-drop-shadow: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
 .filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
@@ -989,19 +989,21 @@ video {
   --adaptive: none;
 }
 
-[data-aos="bg-slide-up"] {
-    background: transparent;
-    color:aliceblue;
-    transition-property: background;
-}
-
-[data-aos="bg-slide-up"].aos-animate {
-    background:white;
-    color: darkslategrey;
-}
-
-[data-aos="bg-slide-up"].aos-animate nav{
-    color: darkslategrey;
+@media screen and (min-width: 768px){
+    [data-aos="bg-slide-up"] {
+        background: transparent;
+        color:aliceblue;
+        transition-property: background;
+    }
+    
+    [data-aos="bg-slide-up"].aos-animate {
+        background:white;
+        color: darkslategrey;
+    }
+    
+    [data-aos="bg-slide-up"].aos-animate nav{
+        color: darkslategrey;
+    }
 }
 
 .before\:absolute::before {
@@ -1562,4 +1564,3 @@ video {
     padding-bottom: 4rem;
   }
 }
-
